# lg2t

./: CHANGELOG.md  README.md  compiler.py  example_graph.py  graph.py  main.py  migrator.py  pyproject.toml
examples/: example_graph.py
examples/basic_static/: activities.py  workflow.py
src/lg2t/: __init__.py  graph.py  migrator.py
tests/: __init__.py  test_graph.py
